Neural_Network_Architectures_in_IPL_Score_Prediction_Balancing_Accuracy_and_Training_Time_.ipynb

--- a/Neural_Network_Architectures_in_IPL_Score_Prediction_Balancing_Accuracy_and_Training_Time_.ipynb
+++ b/Neural_Network_Architectures_in_IPL_Score_Prediction_Balancing_Accuracy_and_Training_Time_.ipynb
@@ -75,7 +75,7 @@
       },
       "source": [
         "# Mounting GDrive and importing dataset\n",
-        "data = pd.read_csv('/content/ipl_data1.csv')\n",
+        "data = pd.read_csv('ipl_data1.csv')\n",
         "print(f\"Dataset successfully Imported of Shape : {data.shape}\")"
       ],
       "execution_count": null,
